Upgrade FunnyQT dep